WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
288943
[macOS] Vertical scrollbar is misplaced when a nonzero left content inset is set
https://bugs.webkit.org/show_bug.cgi?id=288943
Summary
[macOS] Vertical scrollbar is misplaced when a nonzero left content inset is set
Wenson Hsieh
Reported
2025-03-02 14:09:21 PST
.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-03-02 15:04:44 PST
<
rdar://problem/145979548
>
Wenson Hsieh
Comment 2
2025-03-02 15:41:24 PST
Pull request:
https://github.com/WebKit/WebKit/pull/41749
EWS
Comment 3
2025-03-03 08:22:04 PST
Committed
291496@main
(b6b2dc97d5c1): <
https://commits.webkit.org/291496@main
> Reviewed commits have been landed. Closing PR #41749 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug